# gsp-rs

./: .gitignore  AGENTS.md  Cargo.toml  build.rs  design.md  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  readme  tsconfig.interaction.json  tsconfig.json  tsconfig.runtime-core.json  tsconfig.runtime.json
.cargo/: config.toml
crates/runtime-assets/: Cargo.toml
crates/runtime-core/: Cargo.toml
src/: config.rs  format.rs  geometry_parity.rs  html.rs  lib.rs  main.rs  pipeline.rs  png.rs  render.rs  report.rs  upload.rs  util.rs
src/export/: html.rs
src/format/: decode.rs  error.rs  group_kind.rs  groups.rs  records.rs  strings.rs
src/html/: viewer.css  viewer.js  viewer_drag.js  viewer_drag_pan.js  viewer_dynamics.js  viewer_dynamics_stub.js  viewer_geometry.js  viewer_overlay.js  viewer_overlay_stub.js  viewer_render.js  viewer_render_basic.js  viewer_render_circular.js  viewer_render_hotspots.js  viewer_render_images.js  viewer_render_labels.js  viewer_render_polygons.js  viewer_render_tables.js  viewer_scene.js  viewer_scene_basic.js  viewer_scene_circular.js  viewer_scene_intersections.js  viewer_scene_trace.js  viewer_types.d.ts
src/pipeline/: artifacts.rs  compile.rs  document.rs  inspector.rs  test_support.rs  tests.rs
src/render/: extract.rs  functions.rs  geometry.rs  mod.rs  scene.rs
src/runtime/: extract.rs  functions.rs  geometry.rs  mod.rs  payload_consts.rs  scene.rs
test-results/: .last-run.json
tests/: geometry-parity.mjs  object_graph_coverage.rs  object_graph_regressions.rs
xtask/: Cargo.toml
(+1895 files in other folders)
